force-app/main/default/objects/Krow__Scheduler_Criteria__c/Krow__Scheduler_Criteria__c.object-meta.xml
<CustomObject>
    <description>Object to store Scheduler Criteria.</description>
    <label>Scheduler Criteria</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Scheduler Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduler Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>