force-app/main/default/objects/Krow__Scheduler_Criteria__c/fields/Krow__Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>Krow__Criteria_Field__c</fullName>
    <description>used to store Criteria field API Name.</description>
    <label>Criteria Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>