force-app/main/default/objects/Krow__Scheduler_Criteria__c/fields/Krow__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Field_Type__c</fullName>
    <description>This field is used to store field type of Operator.</description>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>TIME</fullName>
            </value>
            <value>
                <fullName>MULTIPICKLIST</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>NUMBER</fullName>
            </value>
            <value>
                <fullName>DOUBLE</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
            </value>
            <value>
                <fullName>PERCENT</fullName>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
            <value>
                <fullName>REFERENCE</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>TEXTAREA</fullName>
            </value>
            <value>
                <fullName>STRING</fullName>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>