force-app/main/default/objects/Krow__Scheduler_Criteria__c/fields/Krow__Operator__c.field-meta.xml
<CustomField>
    <fullName>Krow__Operator__c</fullName>
    <description>used to store operator value.</description>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equals To</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less Than Equals To</fullName>
            </value>
            <value>
                <fullName>Greater Than Equals To</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Not Contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>