force-app/main/default/objects/Krow__Scheduler_Criteria__c/fields/Krow__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sequence__c</fullName>
    <description>used to store Scheduler Criteria sequence.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>