force-app/main/default/objects/Krow__Scheduler_Criteria__c/fields/Krow__Value__c.field-meta.xml
<CustomField>
    <fullName>Krow__Value__c</fullName>
    <description>used to store Scheduler Criteria Value.</description>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>